<resources>
    <string name="app_name">ProjetoMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cruzeiro do Sul</string>
    <string name="nav_header_subtitle">André Tipolt Lopes | Gabryel Arcanjo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_ciencia_computacao">Ciência da Computação</string>
    <string name="menu_analise_desenvolvimento_sistemas">Análise e Desenvolvimento de Sistemas</string>
    <string name="menu_quem_somos">Quem Somos</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_galeria">Galeria</string>
</resources>