<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ciencia_computacao"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_ciencia_computacao" />
        <item
            android:id="@+id/nav_analise_desenvolvimento_sistemas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_analise_desenvolvimento_sistemas" />
        <item
            android:id="@+id/nav_quem_somos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_quem_somos" />
        <item
            android:id="@+id/nav_contato"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contato" />
        <item
            android:id="@+id/nav_galeria"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_galeria" />
    </group>
</menu>