<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projetomenu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_ciencia_computacao"
        android:name="com.example.projetomenu.ui.cienciaComputacao.CienciaComputacaoFragment"
        android:label="@string/menu_ciencia_computacao"
        tools:layout="@layout/fragment_ciencia_computacao" />

    <fragment
        android:id="@+id/nav_analise_desenvolvimento_sistemas"
        android:name="com.example.projetomenu.ui.analiseDesenvolvimentoSistema.AnaliseDesenvolvimentoFragment"
        android:label="@string/menu_analise_desenvolvimento_sistemas"
        tools:layout="@layout/fragment_analise_desenvolvimento_sistema" />

    <fragment
        android:id="@+id/nav_quem_somos"
        android:name="com.example.projetomenu.ui.quemSomos.QuemSomosFragment"
        android:label="@string/menu_quem_somos"
        tools:layout="@layout/fragment_quem_somos" />

    <fragment
        android:id="@+id/nav_contato"
        android:name="com.example.projetomenu.ui.contato.ContatoFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/fragment_contato" />

    <fragment
        android:id="@+id/nav_galeria"
        android:name="com.example.projetomenu.ui.galeria.GaleriaFragment"
        android:label="@string/menu_galeria"
        tools:layout="@layout/fragment_galeria" />
</navigation>